--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,36 +8,39 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Meus amigos", user_friendships_path(current_user), class: "nav-link" %>
-          </li>
-          <li class="nav-item active">
-            <%= link_to pending_players_path, class: "nav-link"  do %>
-              <% if current_user.pending? || current_user.requests? %>
-                <i class="fa-solid fa-circle-exclamation"></i>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto">
+          <% if user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "Meus amigos", user_friendships_path(current_user), class: "nav-link" %>
+            </li>
+            <li class="nav-item active" id="notify">
+              <%= link_to pending_players_path, class: "nav-link"  do %>
+              <%# Turbo Frame pra notificações aparecerem sem recarregar %>
+                  <% if current_user.pending? || current_user.requests? %>
+                    <i class="fa-solid fa-circle-exclamation"></i>
+                  <% end %>
+                    Notificações
               <% end %>
-                Notificações
-            <% end %>
-          </li>
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "magikarp.png", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Meu Perfil", profile_path(current_user), class: "dropdown-item" %>
-              <%= link_to "Criar novo Grupo",  new_game_path, class: "dropdown-item" %>
-              <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
-    </div>
+            </li>
+            <li class="nav-item dropdown">
+            <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <%= image_tag "magikarp.png", class: "avatar", alt: "dropdown menu" %>
+            </a>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Meu Perfil", profile_path(current_user), class: "dropdown-item" %>
+                <%= link_to "Criar novo Grupo",  new_game_path, class: "dropdown-item" %>
+                <%= link_to "Sair", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              </div>
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+   
   </div>
 </div>
