botoes nas pg de conversa

--- a/app/views/assistants/index.html.erb
+++ b/app/views/assistants/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container chatbot">
   <h1>O Mago da 4ª Parade lhe aguarda</h1>
+  <%= link_to "Voltar", :back, class: "btn btn-flat" %>
   <div id="assistants">
     <%= render @assistants %>
   </div>
