--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -13,6 +13,7 @@ $white: #fff3ff;
 
 // paleta
 $dark-1: #16181F;
+$dark-shadow: #16181f5d;
 $dark-2: #272937;
 $mid-gray: #5A5D74;
 $light-1: #A7B1C1;
