--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -37,6 +37,11 @@
   </div>
   <% if current_user == @game.user %>
     <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
+    <%= link_to "Delete",
+      game_path(@game),
+      data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
+      class: "btn btn-flat"
+    %>
   <% end %>
     <%= link_to "Voltar", games_path,  class: "btn-ghost"  %>
 </div>
