--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,6 +31,7 @@ h1 {
 }
 
 .card-trip {
+  border-radius: 25px;
   overflow: hidden;
   background: $white;
   box-shadow: 0 0 15px $dark-shadow;
@@ -54,9 +55,30 @@ h1 {
   margin: 0;
 }
 .card-trip .card-trip-infos {
-  padding: 16px;
+  padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+}
+
+.game-header {
+  padding: 5px;
+  padding-left: 10px;
+}
+
+ul {
+  border: none;
+}
+
+.card {
+  border: none;
+}
+
+a {
+  text-decoration: none;
+  color: $cold-high;
+}
+a:hover {
+  color: $cold-light;
 }
