--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,6 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
-      <%= cl_image_tag @user.photo.key, height: 300, width: 400, crop: :fill %>
       <%= f.input :nick_name %>
       <%= f.input :age %>
       <%= f.input :email,
@@ -19,6 +18,7 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
+      <%= f.input :photo, as: :file %>
     </div>
 
     <div class="form-actions">
