--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,11 @@
             </li>
             <li class="nav-item dropdown">
             <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <%= image_tag "magikarp.png", class: "avatar", alt: "dropdown menu" %>
+              <% if current_user.photo.key %>
+                <%= cl_image_tag current_user.photo.key, class: "avatar", height: 40, width: 40, crop: :fill %>
+              <% else%>
+                <%= image_tag "magikarp.png", class: "avatar", alt: "dropdown menu" %>
+              <% end %>
             </a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <%= link_to "Meu Perfil", profile_path(current_user), class: "dropdown-item" %>
@@ -41,6 +45,6 @@
           <% end %>
         </ul>
       </div>
-   
+
   </div>
 </div>
