--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -6,6 +6,6 @@
   <%= render "form", game: @game %>
 
 </div>
-<div class="container">
+<div class="container mt-3">
     <%= link_to "Voltar", :back, class: "btn btn-flat" %>
 </div>
