--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
   <h1><%= @game.name %></h1>
   <h3><%= @game.description %></h3>
   <h4>Narrador: <%= @game.user.nick_name %></h4>
-  <%= link_to "Conversas", chat_game_path(@game), class: "btn-flat" %>
+  <%= link_to "Conversas", chat_game_path(@game), class: "btn-gradient" %>
     <hr>
   <% if @game.user == current_user %>
     <%= link_to "Edit",
@@ -36,13 +36,15 @@
     </div>
   </div>
   <% if current_user == @game.user %>
-    <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
-    <%= link_to "Delete",
+    <button type="button" class="btn btn-gradient" data-bs-toggle="modal" data-bs-target="#inviteModal">Convidar para este jogo</button>
+    <p></p>
+    <%= link_to "Delete este jogo" ,
       game_path(@game),
       data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-      class: "btn btn-flat"
+      class: "btn btn-gradient"
     %>
   <% end %>
+  <p></p>
     <%= link_to "Voltar", games_path,  class: "btn-ghost"  %>
 </div>
 
