--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -41,7 +41,7 @@
                   data: {turbo_method: :delete, turbo_confirm: "Tem certeza?"},
                   class: "bt-icon-danger",
                   alt: "Excluir Amigo" do %>
-            <i class="fa-solid fa-trash-can"></i>
+              <i class="fa-solid fa-trash-can"></i>
             <% end %>
             <%= link_to friendship_path(f),
               class: "bt-icon-flat",
@@ -91,5 +91,5 @@
 </div>
 
 <div class="container">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
