--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -7,5 +7,5 @@
 
 </div>
 <div class="container">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
