--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path('homeimg.jpg') %>);">
   <div class="container">
-    <h1>Bem vindos ao <strong>World in Pocket</strong>!</h1>
+    <h1 class="ch stroke">Bem vindos ao <strong>World in Pocket</strong>!</h1>
     <p>O lugar aonde você com certeza irá jogar!</p>
     <%= link_to "Todos os jogos", games_path, class: "btn-flat" %>
   </div>
