--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -59,6 +59,5 @@
 
 
 <div class="container">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
- 
