--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -54,6 +54,11 @@ h1 {
   opacity: .7;
   margin: 0;
 }
+.card-trip .text-item {
+  font-size: 16px;
+  font-weight: bold;
+  color: $cold-dark;
+}
 .card-trip .card-trip-infos {
   padding: 10px;
   display: flex;
