--- a/app/views/players/pending.html.erb
+++ b/app/views/players/pending.html.erb
@@ -40,5 +40,5 @@
   </div>
 </div>
 <div class="container">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
