--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,6 @@
   <div class="container">
     <h1 class="ch stroke">Bem vindos ao <strong>Worlds in Pocket</strong>!</h1>
     <p>O lugar aonde você com certeza irá jogar!</p>
-    <%= link_to "Todos os jogos", games_path, class: "btn btn-primary" %>
+    <%= link_to "Todos os jogos", games_path, class: "btn btn-index" %>
   </div>
 </div>
