detalhes de linguas e perfil

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -9,6 +9,14 @@
   text-decoration: none;
 }
 
+.margin-l {
+  margin-left: 20px;
+}
+
+.margin-b {
+  margin-bottom: 20px;
+}
+
 .btn-ghost:hover {
   background: $cold-dark;
   color: $white;
