--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -9,7 +9,14 @@
   <% @pending.each do |pf| %>
     <ul class="list-group">
     <% if pf.accepted == false %>
-      <li class="list-group-item"><h5><%= pf.receiver.nick_name %></h5> <p>(<%= pf.receiver.email %>)</p></li>
+      <li class="list-group-item margin-b"><h5><%= pf.receiver.nick_name %></h5> <p>(<%= pf.receiver.email %>)</p>
+        <%= link_to friendship_path(pf),
+                    data: {turbo_method: :delete, turbo_confirm: "Tem certeza?"},
+                    class: "bt-icon-danger",
+                    alt: "Excluir Amigo" do %>
+          <i class="fa-solid fa-trash-can"></i>
+        <% end %>
+      </li>
     <% end %>
     </ul>
   <% end %>
@@ -18,14 +25,14 @@
     <ul class="list-group" data-controller="chat">
       <% @friends.each do |f| %>
         <% if current_user == f.asker %>
-          <li class="list-group-item">
+          <li class="list-group-item margin-b">
             <h5><%= f.receiver.nick_name %></h5>
             <p><%= f.receiver.first_name %> <%= f.receiver.last_name %></p>
             <%= link_to friendship_path(f),
                   data: {turbo_method: :delete, turbo_confirm: "Tem certeza?"},
                   class: "bt-icon-danger",
                   alt: "Excluir Amigo" do %>
-            <i class="fa-solid fa-trash-can"></i>
+              <i class="fa-solid fa-trash-can"></i>
             <% end %>
             <%= link_to friendship_path(f),
             class: "bt-icon-flat",
