--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,9 +12,9 @@
   <h4>Narrador: <%= @game.user.nick_name %></h4>
   <% if current_user.id.in?(@game_players) %>
     <%= link_to "Conversas", chat_game_path(@game), class: "btn-gradient" %>
-    <%= link_to "Assistente", assistants_path, class: "btn-index" %>
+    <%= link_to "🧙‍♂️ Assistente 🤖", assistants_path, class: "btn-index" %>
   <% end %>
-  
+
     <hr>
   <div class="card mt-3 mb-3" style="width: 50rem;">
     <div class="card-header">
