--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -86,6 +86,24 @@
   color: $white;
 }
 
+.btn-assist {
+  color: $warm-dark;
+  font-weight: bolder;
+  border: 1px solid $cold-dark;
+  padding-top: 8px;
+  padding-bottom: 10px;
+  padding-right: 12px;
+  padding-left: 12px;
+  border-radius: 15px;
+  transition: background 0.3s ease;
+  text-decoration: none;
+}
+.btn-assist:hover {
+  color: $warm-light;
+}
+
+
+
 .btn-danger {
   color: $white;
   background: $red;
