--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,7 +12,7 @@
   <h4>Narrador: <%= @game.user.nick_name %></h4>
   <% if current_user.id.in?(@game_players) %>
     <%= link_to "Conversas", chat_game_path(@game), class: "btn-gradient" %>
-    <%= link_to "🧙‍♂️ Assistente 🤖", assistants_path, class: "btn-index" %>
+    <%= link_to "🧙‍♂️ Assistente 🤖", assistants_path, class: "btn-assist", id: "neon" %>
   <% end %>
 
     <hr>
