--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,6 @@
 <div class="container mt-3">
+<div class="games-show-grid">
+  <div>
   <h1>
     <%= @game.name %>
     <% if @game.user == current_user %>
@@ -14,12 +16,13 @@
     <%= link_to "Conversas", chat_game_path(@game), class: "btn-gradient" %>
     <%= link_to "Assistente", assistants_path, class: "btn-index" %>
   <% end %>
-  <% if @game.user == current_user %>
-    <%= link_to "Edit",
-            edit_game_path(@game),
-            class: "btn-ghost"
-          %>
+  </div>
+  <% if @game.photo.key? %>
+    <%= cl_image_tag @game.photo.key, height: 150, width: 200, crop: :fill %>
+  <% else %>
+    <%= image_tag "magikarp.png", class: "fallback-img" %>
   <% end %>
+    </div>
     <hr>
   <div class="card mt-3 mb-3" style="width: 50rem;">
     <div class="card-header">
@@ -56,8 +59,8 @@
   <% end %>
   <p></p>
     <%= link_to "Voltar", games_path,  class: "btn-ghost"  %>
+  </div>
 </div>
-
 
 
 <%# MODAL %>
