--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,18 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path('homeimg.jpg') %>);">
   <div class="container">
     <h1 class="ch stroke">Bem vindos ao <strong>Worlds in Pocket</strong>!</h1>
-    <p>O lugar aonde você com certeza irá jogar!</p>
     <%= link_to "Todos os jogos", games_path, class: "btn btn-index" %>
+  </div>
+</div>
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    O lugar aonde todo mundo joga!
   </div>
 </div>
