--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -83,6 +83,6 @@
 
 <%# CHAT MODAL V-centered + scroll%>
 
-<div class="container">
+<div class="container margin-t">
     <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
