--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,3 +6,6 @@
     <%= f.button :submit, class: "btn btn-flat m-2" %>
   <% end %>
 </div>
+<div class="container margin-t">
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
+</div>
