--- a/app/views/games/chat.html.erb
+++ b/app/views/games/chat.html.erb
@@ -19,6 +19,6 @@
     <%= f.submit "Enviar", class: "btn-flat mb-3" %>
   <% end %>
   <div class="container m-3">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
   </div>
 </div>
