--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,11 +1,10 @@
-<div class="container mt-3">
+<div class="container m-3">
   <h1>Novo Grupo</h1>
   <hr>
-</div>
-<div class="container">
-  <%= render "form", game: @game %>
-
-</div>
-<div class="container mt-3">
-    <%= link_to "Voltar", :back, class: "btn btn-flat" %>
+  <div class="container mb-3">
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
+  </div>
+  <div class="container">
+    <%= render "form", game: @game %>
+  </div>
 </div>
