class no botao de criar grupo

--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container mt-3">
   <h1>Meus amigos</h1>
   <button type="button" class="btn-index" data-bs-toggle="modal" data-bs-target="#requestModal"> <i class="fa-solid fa-plus"></i>Novo Amigo</button>
+  <div class="container margin-t">
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
+</div>
   <hr>
 </div>
 
