--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -5,5 +5,5 @@
   <%= f.input :lfp?, placeholder: "Tornar o jogo público?" %>
   <%= f.input :online?, placeholder: "Sessões Online?" %>
   <%= f.input :pg, placeholder: "Idade minima" %>
-  <%= f.submit %>
+  <%= f.button :submit, class:"btn-flat", label: "Criar Novo Grupo" %>
 <% end %>
