--- a/app/views/players/pending.html.erb
+++ b/app/views/players/pending.html.erb
@@ -1,6 +1,9 @@
 <div class="container mt-3">
   <h1>Convites Pendentes</h1>
 </div>
+<div class="container">
+    <%= link_to "Voltar", :back, class: "btn-ghost" %>
+</div>
 <div class="container mt-3">
   <div class="card" style="width: 36rem;">
     <h3>Convites para Grupos</h3>
@@ -38,7 +41,4 @@
       </ul>
     </div>
   </div>
-</div>
-<div class="container margin-t">
-    <%= link_to "Voltar", :back, class: "btn-ghost" %>
 </div>
