--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,7 +6,7 @@
 </div>
 <nav>
   <div class="nav nav-tabs mt-5" id="nav-tab" role="tablist">
-    <button class="nav-link active" id="nav-games-tab" data-bs-toggle="tab" data-bs-target="#nav-games" type="button" role="tab" aria-controls="nav-games" aria-selected="true">Meus Jogos</button>
+    <button class="nav-link active" id="nav-games-tab" data-bs-toggle="tab" data-bs-target="#nav-games" type="button" role="tab" aria-controls="nav-games" aria-selected="true">Meus Grupos</button>
     <%# <button class="nav-link" id="nav-sheets-tab" data-bs-toggle="tab" data-bs-target="#nav-sheets" type="button" role="tab" aria-controls="nav-sheets" aria-selected="true">Minhas Fichas</button> %>
     <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Configurações</button>
   </div>
