--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -61,7 +61,7 @@
         <% end %>
       <% end %>
     </ul>
-
+</div>
 <%# MODAL ADD FRIEND %>
 <div class="modal fade" id="requestModal" tabindex="-1" aria-labelledby="requestModalLabel" aria-hidden="true">
   <div class="modal-dialog">
