att footer colors

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,6 @@
 .banner {
+  background-image: "homeimg.jpg";
+  // linear-gradient: ;
   background-size: cover;
   background-position: center;
   padding: 200px 0;
