--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= image_path('homeimg.jpg') %>);">
   <div class="container">
     <h1 class="ch stroke">Bem vindos ao <strong>Worlds in Pocket</strong>!</h1>
-    <hr>
-    <%= link_to "Todos os grupos", games_path, class: "btn btn-index" %>
+    <%= link_to "Todos os Grupos", games_path, class: "btn btn-index" %>
   </div>
 </div>
