--- a/app/views/assistants/_assistant.html.erb
+++ b/app/views/assistants/_assistant.html.erb
@@ -2,5 +2,5 @@
   <%= turbo_stream_from dom_id(assistant) %>
 
   <p class="user-question"><%= assistant.question %></p>
-  <p class="ai-answer"><%= assistant.answer || "🧙‍♂️" %></p>
+  <p class="ai-answer"><%= assistant.answer || "🧙‍♂️- Humm... Deixe-me pensar..." %></p>
 </div>
