--- a/app/views/games/chat.html.erb
+++ b/app/views/games/chat.html.erb
@@ -9,15 +9,14 @@
 
   <%= simple_form_for [@game, @game_message],
     html: {class: "d-flex",
-           data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f|
-  %>
+           data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }} do |f| %>
     <%= f.input :content,
       label: false,
       placeholder: "Conversas em #{@game.name}",
-      wrapper_html: {class: "flex-grow-1"}
-    %>
+      wrapper_html: {class: "flex-grow-1"} %>
     <%= f.submit "Enviar", class: "btn-flat mb-3" %>
   <% end %>
+  
   <div class="container m-3">
     <%= link_to "Voltar", :back, class: "btn-ghost" %>
   </div>
