--- a/app/assets/stylesheets/pages/_games.scss
+++ b/app/assets/stylesheets/pages/_games.scss
@@ -4,6 +4,8 @@
 }
 
 .fallback-img{
-  width: 200px;
+  width: 400px;
   height: 150px;
+  border-top-left-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
