--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -73,7 +73,7 @@
         <%= render "players/invite_form", game: @game, player: @player %>
       </div>
       <div class="modal-footer">
-        <%=  invite_game_url %>
+        <%#  invite_game_url %>
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
       </div>
     </div>
